# Autonomous_System

./: README.md
Perception/: Readme.md
Perception/Face_Tracking/: Readme.md
Perception/Human_following_from_scratch/: CMakeLists.txt  Control.py  Readme.md  camera_sub_sim.py  conversion_transform.py  convert_error_to_meter.py  follow.launch  package.xml  sub_detgepthimage.py
Perception/Kinect_Files_For_Workspace/: README.md
Perception/Longtudinal_Follow/: Follower_control.py  Readme.md  camera_stream_sim.py
Perception/Nav_Stack_integration/: Readme.md
Perception/Nav_Stack_integration_for_humanFollowing/: Readme.md
Perception/building_editor_models/: Readme.md
Perception/freenect_stack/: README.md
integration/delivery_robot_sim/: default.rviz
integration/delivery_robot_urdf2/: CMakeLists.txt
integration/delivery_robot_urdf2/config/: common_costmap.yaml  controllers.yaml  rviz_gmapping.rviz  rviz_integration.rviz
integration/delivery_robot_urdf2/launch/: allfiles.launch  ekf.launch  imu.launch  odom.launch  rosserial.launch  rviz.launch
integration/delivery_robot_urdf2/maps/: corridor.yaml  door.pgm  door.yaml  door2.pgm  door5.yaml  map.pgm  map.yaml  map2.pgm  map_apartment_1stroom.pgm  map_simulation.yaml  real_map1.pgm  real_map2.pgm  real_map3.pgm  room1withlandmarksV1.pgm  room1withlandmarksV2.pgm  room1withlandmarksV2.yaml  room3.pgm  room3.yaml
integration/delivery_robot_urdf2/meshes/: base_link.STL  left_wheel.STL
integration/delivery_robot_urdf2/scripts/: dom_converter.py  goal_stop.py  normalization.py  quaternion_to_euler.py  sync_imu_odom.py
integration/delivery_robot_urdf2/src/: ekf_odom_pub.cpp  sync_imu_odom.cpp  wheel_ticks.cpp
integration/gmapping/: slam_gmapping_pr2.launch
integration/integration/: CMakeLists.txt  package.xml
navigation_control/: CMakeLists.txt  adaptive_ld.py  control.py  control_module.py  package.xml
navigation_control/msgs/: wp_list.msg
navigation_control/scripts/: Waypoints visualization copy.py  Waypoints visualization.py  adaptive_ld.py  control_module.py  integration_test.py  test.py  trial.py
path_planning/: CMakeLists.txt  package.xml
path_planning/delivery_robot_urdf/: CMakeLists.txt  package.xml
path_planning/delivery_robot_urdf/config/: new_ros_controllers.yaml
path_planning/delivery_robot_urdf/launch/: display.launch  gazebo.launch  odom_simulation.launch  spawn.launch
path_planning/delivery_robot_urdf/src/: print.cpp
path_planning/delivery_robot_urdf/urdf/: delivery_robot_urdf.urdf
path_planning/delivery_robot_urdf/worlds/simple_house/: model.config
perception/: package.xml
slam/: package.xml
slam/delivery_robot_urdf2/: CMakeLists.txt  package.xml
slam/delivery_robot_urdf2/config/: new_ros_controllers.yaml
slam/delivery_robot_urdf2/include/: hardware_interface.h
slam/delivery_robot_urdf2/launch/: allfiles.launch  control.launch  display.launch  ekf.launch  gazebo.launch  laser_scan_matcher.launch  move_base.launch  odom.launch  odom_simulation.launch  rosserial.launch  spawn.launch
slam/delivery_robot_urdf2/maps/: real_map2.yaml  real_map_test.pgm
slam/delivery_robot_urdf2/meshes/: right_wheel.STL
slam/delivery_robot_urdf2/scripts/: normalization.py
slam/delivery_robot_urdf2/src/: hardware_interface.cpp  odometry_publisher_sim.cpp  wheel_ticks.cpp
slam/delivery_robot_urdf2/urdf/: delivery_robot_urdf2.csv  delivery_robot_urdf2.urdf
(+205 files in other folders)
